Change Log

20180724 SCL
- added RELAY_AUTO_PWM code - not tested - needs PWM-capable pin to function
	
20180523 SCL
- when RTC not defined, g++ bug pops out:
	open_evse:2384: error: unable to find a register to spill in class 'NO_REGS'
  -> add GPPBUGKLUDGE
	
D5.0.0 20180518 SCL
- implement $F1 RAPI command to simulate front panel short press
- SAFETY: don't allow $SC to raise current capacity during over temperature event
- SAFETY: SetCurrentCapacity() -> when nosave set, don't allow current capacity to be
	raised above EEPROM value
	-> don't allow $SC with V to raise current capacity above value in EEPROM
	-> don't allow PP to set current capacity higher than EEPROM
- PP code cleanup
- don't allow SetCurrentCapacity() to go above PP value
- implement over current protection. if OVERCURRENT_THRESHOLD is set,
	then if EV draws >= OVERCURRENT_THRESHOLD amps for >=
	OVERCURRENT_TIMEOUT ms -> hard fault
	
20180417 SCL
- fix compile errors when no GFI and ADVPWR. Must also undef UL_COMPLIANT,
	GFI_SELFTEST, AUTOSVCLEVEL
	
20180406 SCL
- fix compile error when AMMETER not defined
	
20180404 SCL
- get rid of deprecated/superfluous PP_TABLE_TESLA
- don't let delay timer override EVSE_STATE_DISABLED
	
D4.13.0 20180403 SCL
- revert change from D4.12.0: delay timer would always wait for EV finish charging before ending.
  -> timer will go to sleep at end of specified time window unless charge or time limit set -> charge or time limit will still override timer end.
- cleanup of time/charge limit zeroing code

	
20180328 SCL
- fixed bug: $ST command would clear timer instead of setting it if all
	4 parameters had leading zeros
	e.g. $ST 01 05 02 01
	
20180323 SCL
- added PERIODIC_LCD_REFRESH_MS code for Glyn Hudson, currently disabled
  -> redraw of LCD at periodic intervals, in case it gets corrupted
  -> was needed for him to get past CE EMC testing
	
20180313 SCL
- merge PR#83 THREEPHASE from Glyn Hudson
- related code cleanup
	
D4.12.3 20180209 SCL